# cogneetree

./: .gitignore  AGENTS.md  AGENT_MEMORY.md  CLAUDE.md  Makefile  README.md  pyproject.toml  verify_storage.py
.github/workflows/: test.yml
docs/: AGENT_MEMORY.md  CONTEXT_MEMORY_SYSTEM.md  DISTRIBUTED_IMPLEMENTATION.md  DOCUMENTATION.md  GUIDED_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INSPECTOR_GUIDE.md  PROTOCOL.md  ROADMAP.md  SETUP.md  STRATEGY.md  TESTING_PLAN.md  VALIDATION_AND_TESTING.md
docs/implementation/: phase-00-foundations.md  phase-01-protocol-core.md  phase-02-postgres-schema.md  phase-03-leader-admission.md  phase-04-supersede-update.md  phase-05-provenance-snapshots.md  phase-06-metadata-validation.md  phase-07-tombstones.md  phase-08-graph-edges.md  phase-09-search-indexes.md  phase-10-worker-loop.md  phase-11-http-adapter.md  phase-12-observability.md
examples/: agent_usage.py
src/cogneetree/: EXAMPLE.py  __init__.py  agent_memory.py  cli.py  config.py  db_memory.py  db_protocol.py  distributed.py  leader.py  memory.py  ports.py  protocol.py  sqlite_log.py  store.py  workflow.py
src/cogneetree/core/: context_manager.py  interfaces.py  models.py
src/cogneetree/retrieval/: hierarchical_retriever.py  retrieval_strategies.py  semantic_retrieval.py
src/cogneetree/storage/: __init__.py  async_postgres_storage.py  file_storage.py  in_memory_storage.py  redis_storage.py  sql_storage.py
tests/: conftest.py  test_agent_memory.py  test_agentic_context_config.py  test_agentic_context_integration.py  test_agentic_context_manager.py  test_agentic_context_retrieval_strategies.py  test_agentic_context_semantic_retrieval.py  test_agentic_context_storage.py  test_agentic_context_tag_normalization.py  test_agentic_context_workflow.py  test_cascading_propagation.py  test_conflict_detection.py  test_context_memory_api.py  test_database_context_memory.py  test_decision_protocol.py  test_hierarchical_retriever.py  test_importance_tiers.py  test_storage_contract.py
